# aluguel-de-salas-api

./: .gitattributes  .gitignore  README.md  manage.py  pyproject.toml
aluguel_de_salas/: asgi.py  settings.py  urls.py  wsgi.py
aluguel_de_salas/api/: models.py  serializers.py  utils.py  views.py
aluguel_de_salas/api/migrations/: 0001_initial.py  0002_auto_20201205_1913.py
